Replace bash test generation with Maven plugin
Replace update-spec-tests.sh with a cm-test-gen-plugin that automatically
downloads the Component Model spec test suite, converts .wast files via
wasm-tools json-from-wast, and generates JUnit 5 test classes at build time.

- Add cm-test-gen-lib: test suite download, WAST data model, JavaParser
  code generation for all command types (module, component, assert_invalid,
  assert_malformed, assert_unlinkable, assert_return, assert_trap)
- Add cm-test-gen-plugin: Maven plugin wrapper (generate-test-sources phase)
- Move JsonFromWast to wasm-tools module as production class with builder API
- Include all 31 wasm-tools/*.wast files (530 tests, 389 passing, 141
  disabled for unimplemented parser sections)
- Runtime tests (assert_return/assert_trap) generated as @Disabled
  placeholders for when component instantiation is implemented
- Add CONTRIBUTING.md documenting the test infrastructure